--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Airbnb's ESLint config with TypeScript and Prettier support",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/toshi-toma/eslint-config-airbnb-typescript-prettier.git"
@@ -24,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier/issues"
   },
-  "homepage": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier#readme"
+  "homepage": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier#readme",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "prettier": "^1.18.2"
+  },
+  "peerDependencies": {
+    "eslint": "^5.3.0",
+    "prettier": "^1.18.2",
+    "typescript": ">=3.2.1 <3.6.0"
+  }
 }
