--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "eslint-config-airbnb-typescript-prettier",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Airbnb's ESLint config with TypeScript and Prettier support",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "release": "standard-version",
+    "release:dryrun": "standard-version --dry-run"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/toshi-toma/eslint-config-airbnb-typescript-prettier.git"
@@ -39,5 +42,8 @@
     "eslint": "^5.3.0",
     "prettier": "^1.18.2",
     "typescript": ">=3.2.1 <3.6.0"
+  },
+  "devDependencies": {
+    "standard-version": "^6.0.1"
   }
 }
