--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Airbnb's ESLint config with TypeScript and Prettier support",
   "main": "index.js",
   "scripts": {
+    "test": "eslint --ext .tsx,ts test/",
     "release": "standard-version",
     "release:dryrun": "standard-version --dry-run"
   },
@@ -44,6 +45,8 @@
     "typescript": ">=3.2.1 <3.6.0"
   },
   "devDependencies": {
-    "standard-version": "6.0.1"
+    "@types/react": "^16.8.22",
+    "standard-version": "6.0.1",
+    "typescript": "^3.5.2"
   }
 }
