--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.22",
+    "react": "^16.8.6",
     "standard-version": "6.0.1",
     "typescript": "^3.5.2"
   }
