--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
   },
   "homepage": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^1.10.2",
-    "@typescript-eslint/parser": "^1.10.2",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react": "^7.14.3",
     "prettier": "^1.18.2"
   },
   "peerDependencies": {
-    "eslint": "^5.3.0",
+    "eslint": "^5.3.0 || ^6.2.2",
     "prettier": "^1.18.2",
     "typescript": ">=3.2.1 <3.6.0"
   },
   "devDependencies": {
     "@types/react": "16.8.22",
+    "eslint": "^6.2.2",
     "react": "16.8.6",
     "standard-version": "6.0.1",
     "typescript": "3.5.2"
