--- a/package.json
+++ b/package.json
@@ -28,26 +28,27 @@
   },
   "homepage": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.1.0",
+    "@typescript-eslint/parser": "^2.1.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.1.0",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^1.18.2"
   },
   "peerDependencies": {
-    "eslint": "^5.3.0 || ^6.2.2",
+    "eslint": "^5.3.0 || ^6.3.0",
     "prettier": "^1.18.2",
-    "typescript": ">=3.2.1 <3.6.0"
+    "typescript": ">=3.2.1 <3.7.0"
   },
   "devDependencies": {
     "@types/react": "16.8.22",
-    "eslint": "^6.2.2",
+    "eslint": "^6.3.0",
     "react": "16.8.6",
     "standard-version": "6.0.1",
-    "typescript": "3.5.2"
+    "typescript": "3.6.2"
   }
 }
