--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "prettier": "^1.18.2"
+    "eslint-plugin-react-hooks": "^2.5.0"
   },
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.8.0",
@@ -47,6 +46,7 @@
   "devDependencies": {
     "@types/react": "16.9.25",
     "eslint": "6.8.0",
+    "prettier": "1.18.2",
     "react": "16.13.1",
     "standard-version": "7.1.0",
     "typescript": "3.7.3"
