--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.2.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0"
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0 || ^6.8.0",
+    "eslint": "^5.16.0 || ^6.8.0 || ^7.2.0",
     "prettier": "^1.18.2 || ^2.0.0",
     "typescript": ">=3.3.1 <3.10.0"
   },
   "devDependencies": {
     "@types/react": "16.9.38",
-    "eslint": "6.8.0",
+    "eslint": "7.2.0",
     "prettier": "2.0.5",
     "react": "16.13.1",
     "standard-version": "8.0.0",
