--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "peerDependencies": {
     "eslint": "^5.16.0 || ^6.8.0 || ^7.2.0",
     "prettier": "^1.18.2 || ^2.0.0",
-    "typescript": ">=3.3.1 <4.1.0"
+    "typescript": ">=3.3.1"
   },
   "devDependencies": {
     "@types/react": "16.14.1",
@@ -49,6 +49,6 @@
     "prettier": "2.1.2",
     "react": "17.0.1",
     "standard-version": "9.0.0",
-    "typescript": "4.0.5"
+    "typescript": "^4.2.2"
   }
 }
