--- a/package.json
+++ b/package.json
@@ -49,6 +49,6 @@
     "prettier": "2.1.2",
     "react": "17.0.1",
     "standard-version": "9.0.0",
-    "typescript": "^4.2.2"
+    "typescript": "4.2.3"
   }
 }
