--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "git+ssh://git@github.com/toshi-toma/eslint-config-airbnb-typescript-prettier.git"
   },
   "engines": {
-    "node": ">=10"
+    "node": "^10.12.0 || ^12.22.0 || ^14.17.0 || >=16.0.0"
   },
   "keywords": [
     "eslint",
@@ -30,22 +30,22 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "peerDependencies": {
-    "eslint": "^5.16.0 || ^6.8.0 || ^7.2.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "prettier": "^1.18.2 || ^2.0.0",
     "typescript": ">=3.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.37",
-    "eslint": "7.14.0",
+    "eslint": "^8.2.0",
     "prettier": "2.1.2",
     "react": "17.0.2",
     "standard-version": "9.0.0",
