--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "homepage": "https://github.com/toshi-toma/eslint-config-airbnb-typescript-prettier#readme",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.7.0",
-    "@typescript-eslint/parser": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.25.3",
@@ -45,10 +45,10 @@
   },
   "devDependencies": {
     "@types/react": "17.0.37",
-    "eslint": "^8.2.0",
+    "eslint": "^8.4.1",
     "prettier": "2.1.2",
     "react": "17.0.2",
     "standard-version": "9.0.0",
-    "typescript": "4.2.3"
+    "typescript": "^4.5.3"
   }
 }
